Improve NFC restart logic with verification