@@ -93,37 +93,57 @@ public class Shell {
     }
 
     public static boolean restartNFC() {
-    try {
-        String[] halNames = {
-            "android.hardware.nfc-service.st",
-            "android.hardware.nfc-service.nxp",
-            "android.hardware.nfc@1.2-service",
-            "android.hardware.nfc-service",
-            "vendor.samsung.hardware.nfc"
-        };
+        try {
+            String[] halNames = {
+                "android.hardware.nfc-service.st",
+                "android.hardware.nfc-service.nxp",
+                "android.hardware.nfc@1.2-service",
+                "android.hardware.nfc-service",
+                "vendor.samsung.hardware.nfc"
+            };
 
-        for (String name : halNames) {
-            Runtime.getRuntime().exec(
-                new String[]{"su", "-c", "killall " + name}
-            ).waitFor();
+            boolean killed = false;
+            for (String name : halNames) {
+                Process p = Runtime.getRuntime().exec(new String[]{"su", "-c", "killall " + name});
+                if (p.waitFor() == 0) {
+                    killed = true;
+                }
+                p.destroy();
+            }
+
+            Thread.sleep(2500);
+
+            boolean serviceRunning = false;
+            for (String name : halNames) {
+                String checkCmd = "pgrep " + name;
+                Process p = Runtime.getRuntime().exec(new String[]{"su", "-c", checkCmd});
+                if (p.waitFor() == 0) {
+                    serviceRunning = true;
+                    p.destroy();
+                    break;
+                }
+                p.destroy();
+            }
+
+            if (killed && !serviceRunning) {
+                Runtime.getRuntime().exec(new String[]{"su", "-c", "svc nfc enable"}).waitFor();
+                Thread.sleep(1000);
+            }
+
+            return true;
+        } catch (Exception e) {
+            return false;
         }
-
-        Thread.sleep(1500);
-        return true;
-    } catch (Exception e) {
-        return false;
     }
-}
 
-	public static boolean runCommand(String command) {
-    try {
-        Process process = Runtime.getRuntime().exec(new String[]{"su", "-c", command});
-        return process.waitFor() == 0;
-    } catch (Exception e) {
-        return false;
+    public static boolean runCommand(String command) {
+        try {
+            Process process = Runtime.getRuntime().exec(new String[]{"su", "-c", command});
+            return process.waitFor() == 0;
+        } catch (Exception e) {
+            return false;
+        }
     }
-}
-
 
     private static String escapeShellArg(String arg) {
         return "'" + arg.replace("'", "'\\''") + "'";
